[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Game_Scene.gd" type="Script" id=1]
[ext_resource path="res://Scripts/Inventory.gd" type="Script" id=3]

[node name="Game_Scene" type="Node"]
script = ExtResource( 1 )

[node name="GUI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="GUI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="History_Book" type="Control" parent="GUI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="GUI/History_Book"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.458824, 0.439216, 0.439216, 1 )

[node name="Buying" type="VBoxContainer" parent="GUI"]
margin_left = 412.0
margin_top = 397.5
margin_right = 612.0
margin_bottom = 467.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="VBoxContainer" parent="GUI/Buying"]
margin_right = 200.0
margin_bottom = 32.0

[node name="Story" type="Label" parent="GUI/Buying/Text"]
margin_left = 46.0
margin_right = 154.0
margin_bottom = 14.0
size_flags_horizontal = 4
text = "Story of the Item"

[node name="Prize" type="Label" parent="GUI/Buying/Text"]
margin_left = 46.0
margin_top = 18.0
margin_right = 154.0
margin_bottom = 32.0
size_flags_horizontal = 4
text = "Prize of the Item"

[node name="Buttons" type="HBoxContainer" parent="GUI/Buying"]
margin_top = 36.0
margin_right = 200.0
margin_bottom = 56.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy" type="Button" parent="GUI/Buying/Buttons"]
margin_right = 98.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DontBuy" type="Button" parent="GUI/Buying/Buttons"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Don't Buy"

[node name="Background" type="Sprite" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="pressed" from="GUI/Buying/Buttons/Buy" to="." method="_on_Buy_pressed"]
[connection signal="pressed" from="GUI/Buying/Buttons/DontBuy" to="." method="_on_DontBuy_pressed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
